--- a/src/Assets/css/Camera_list.css
+++ b/src/Assets/css/Camera_list.css
@@ -56,7 +56,32 @@
   cursor: pointer;
 }
 
-.status {
-  color: green;
-  background-color: lightgreen;
+.rounded-border {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 20px;
+  height: 22px;
+  border-radius: 50%;
+  border-width: 20px !important;
+  border-style: solid;
+  color: inherit;
+  font-size: 12px;
+  line-height: 1;
+}
+
+.rounded-circle {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.circle-green {
+  background-color: green;
+}
+
+.circle-red {
+  background-color: red;
 }
